--- a/website.css
+++ b/website.css
@@ -20,7 +20,7 @@ a:link, a:visited {
   margin-top: 50px;
   margin-bottom: 20px;
   color: #536780;
-  font-size: 40px;
+  font-size: 35px;
 }
 
 #navBar {
@@ -59,11 +59,18 @@ a:link, a:visited {
   word-wrap: break-word;
 }
 
-#home #profile_pic {
-  width: 300px;
-  height: 300px;
-  margin-top: 40px;
-  margin-left: 100px;
+#homeContent {
+  display: flex;
+  word-wrap: break-word;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-bottom: 3%;
+}
+
+#homeContent #profile_pic {
+  width: 250px;
+  height: 250px;
+  margin-top: 70px;
   margin-bottom: 40px;
   border-radius: 150px;
 }
@@ -76,16 +83,16 @@ a:link, a:visited {
   width: 400px;
 }
 
-#home p {
+#homeContent p {
   font-size: 20px;
   color: #ddd;
 }
 
 #introText {
-  margin-top: 75px;
+  margin-top: 60px;
   margin-left: 50px;
-  margin-right: 100px;
   display: block;
+  line-height: 1.5;
 }
 
 .space-before-line {
@@ -101,11 +108,16 @@ a:link, a:visited {
 }
 
 #siteBody {
-  margin-left: 40px;
-  margin-right: 60px;
+  margin-left: 12%;
+  margin-right: 15%;
   margin-bottom: 60px;
   font-size: 20px;
+  line-height: 1.4;
   color: #333;
+}
+
+#siteBody h1 {
+  font-size: 35px;
 }
 
 #workExperience h1 {
@@ -114,16 +126,16 @@ a:link, a:visited {
 
 .resumeItem {
   margin-left: 35px;
-  margin-top: 10px;
+  margin-top: 5px;
   margin-bottom: 0px;
-  font-size: 20px;
+  font-size: 18px;
   display: flex;
   justify-content: flex-end;
 }
 
 .resumeItem p {
   font-weight: 700;
-  font-size: 22px;
+  font-size: 20px;
 }
 
 .resumeItemText {
@@ -134,6 +146,11 @@ a:link, a:visited {
   margin-left: 20px;
   text-align: right;
   color: #757575;
+  width: 250px;
+}
+
+.resumeItem .date p {
+  font-size: 18px;
 }
 
 .resumeItem iframe {
@@ -147,10 +164,10 @@ a:link, a:visited {
 
 #contactContents {
   color: #ddd;
-  margin-left: 40px;
-  margin-right: 20px;
   margin-top: 40px;
   margin-bottom: 70px;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 #contactContents h1 {
