--- a/contact.css
+++ b/contact.css
@@ -1,6 +1,6 @@
 body {
   margin: 0px;
-  font-family: Garamond, sans-serif;
+  font-family: Garamond, Georgia, sans-serif;
   background-color: #f0f0f0;
 }
 
@@ -38,7 +38,7 @@ body {
   position: relative;
   padding-top: 30px;
   padding-bottom: 20px;
-  margin-left: 40px;
+  margin-left: 10%;
 }
 
 #content #contact-text h1 {
@@ -53,6 +53,7 @@ body {
 
 #embedded-form {
   margin-top: 30px;
+  margin-bottom: 30px;
   text-align: center;
 }
 
